--- a/reactForm/src/App.css
+++ b/reactForm/src/App.css
@@ -5,19 +5,6 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
@@ -39,4 +26,15 @@
 
 .read-the-docs {
   color: #888;
+}
+
+form {
+  padding: 10px;
+}
+
+input {
+  margin: 10px;
+}
+button:hover {
+  margin: 20px;
 }
